[package]
name = "zk-merkle-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v0.4.0" }
halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves.git", tag = "v0.9.0" }
ff = "0.13"