[package]
name = "zk-merkle-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
# v0.3.0 due to compatibility with halo2_poseidon dependencies
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v0.3.0" }

# It is better to get this from crates.io to avoid two "distinct" versions living on the project (crates.io and github)
halo2curves = "0.6.1"

halo2_poseidon = { git = "https://github.com/privacy-scaling-explorations/poseidon-gadget.git" }
ff = "0.13"
